RESOLVED FIXED159227
JSRopeString should use release asserts, not debug asserts, about substring bounds
https://bugs.webkit.org/show_bug.cgi?id=159227
Summary JSRopeString should use release asserts, not debug asserts, about substring b...
Filip Pizlo
Reported 2016-06-28 14:00:04 PDT
According to my experiments this change costs nothing. That's not surprising since the most common way to construct a rope these days is inlined into the JIT, which does its own safety checks. This makes us crash sooner rather than corrupting memory.
Attachments
the patch (2.12 KB, patch)
2016-06-28 14:01 PDT, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2016-06-28 14:01:08 PDT
Created attachment 282282 [details] the patch
Filip Pizlo
Comment 2 2016-06-28 14:04:04 PDT
Note You need to log in before you can comment on or make changes to this bug.