JSRopeString should use release asserts, not debug asserts, about substring bounds https://bugs.webkit.org/show_bug.cgi?id=159227

Reviewed by Saam Barati.

According to my experiments this change costs nothing.  That's not surprising since the
most common way to construct a rope these days is inlined into the JIT, which does its own
safety checks.  This makes us crash sooner rather than corrupting memory.

* runtime/JSString.h:



Canonical link: https://commits.webkit.org/177332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202585 268f45cc-cd09-0410-ab3c-d52691b4dbfc